syntax = "proto3";

package plugin_manager;

option go_package = "./plugin_manager";

// 插件信息
message Plugin {
  string id = 1;
  string name = 2;
  string version = 3;
  string description = 4;
  string author = 5;
  string category = 6;
  repeated string tags = 7;
  string download_url = 8;
  int64 download_count = 9;
  double rating = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
  bool is_active = 13;
}

// 插件列表请求
message ListPluginsRequest {
  string category = 1;
  repeated string tags = 2;
  string search_query = 3;
  int32 page = 4;
  int32 page_size = 5;
  string sort_by = 6; // name, rating, download_count, created_at
  bool ascending = 7;
}

// 插件列表响应
message ListPluginsResponse {
  repeated Plugin plugins = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// 获取插件请求
message GetPluginRequest {
  string id = 1;
}

// 获取插件响应
message GetPluginResponse {
  Plugin plugin = 1;
}

// 注册插件请求
message RegisterPluginRequest {
  Plugin plugin = 1;
}

// 注册插件响应
message RegisterPluginResponse {
  bool success = 1;
  string message = 2;
  string plugin_id = 3;
}

// 更新插件请求
message UpdatePluginRequest {
  Plugin plugin = 1;
}

// 更新插件响应
message UpdatePluginResponse {
  bool success = 1;
  string message = 2;
}

// 删除插件请求
message DeletePluginRequest {
  string id = 1;
}

// 删除插件响应
message DeletePluginResponse {
  bool success = 1;
  string message = 2;
}

// 下载插件请求
message DownloadPluginRequest {
  string id = 1;
}

// 下载插件响应
message DownloadPluginResponse {
  bool success = 1;
  string message = 2;
  string download_url = 3;
}

// 搜索插件请求
message SearchPluginsRequest {
  string query = 1;
  int32 limit = 2;
}

// 搜索插件响应
message SearchPluginsResponse {
  repeated Plugin plugins = 1;
}

// 插件服务定义
service PluginService {
  rpc ListPlugins(ListPluginsRequest) returns (ListPluginsResponse);
  rpc GetPlugin(GetPluginRequest) returns (GetPluginResponse);
  rpc RegisterPlugin(RegisterPluginRequest) returns (RegisterPluginResponse);
  rpc UpdatePlugin(UpdatePluginRequest) returns (UpdatePluginResponse);
  rpc DeletePlugin(DeletePluginRequest) returns (DeletePluginResponse);
  rpc DownloadPlugin(DownloadPluginRequest) returns (DownloadPluginResponse);
  rpc SearchPlugins(SearchPluginsRequest) returns (SearchPluginsResponse);
}
